build_log_4.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
D:\android_atharva\app\src\main\java\com\atharva\ollama\MainActivity.java:497: error: cannot find symbol
        updateButtonState(true);
        ^
  symbol:   method updateButtonState(boolean)
  location: class MainActivity
D:\android_atharva\app\src\main\java\com\atharva\ollama\repository\ChatRepository.java:69: error: variable images is already defined in method sendMessage(long,String,List<String>,ChatCallback)
                    List<String> images = null;
                                 ^
D:\android_atharva\app\src\main\java\com\atharva\ollama\repository\ChatRepository.java:74: error: cannot find symbol
                            com.google.gson.JsonArray arr = com.google.gson.JsonParser.parseString(m.imagePaths).getAsJsonArray();
                                                                                      ^
  symbol:   method parseString(String)
  location: class JsonParser
Note: D:\android_atharva\app\src\main\java\com\atharva\ollama\MainActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///D:/android_atharva/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: D:\android_atharva\app\src\main\java\com\atharva\ollama\MainActivity.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  D:\android_atharva\app\src\main\java\com\atharva\ollama\repository\ChatRepository.java:69: error: variable images is already defined in method sendMessage(long,String,List<String>,ChatCallback)
                      List<String> images = null;
                                   ^
  D:\android_atharva\app\src\main\java\com\atharva\ollama\MainActivity.java:497: error: cannot find symbol
          updateButtonState(true);
          ^
    symbol:   method updateButtonState(boolean)
    location: class MainActivity
  D:\android_atharva\app\src\main\java\com\atharva\ollama\repository\ChatRepository.java:74: error: cannot find symbol
                              com.google.gson.JsonArray arr = com.google.gson.JsonParser.parseString(m.imagePaths).getAsJsonArray();
                                                                                        ^
    symbol:   method parseString(String)
    location: class JsonParser
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
15 actionable tasks: 1 executed, 14 up-to-date
